# Proyecto-1---Datos-2

./: Admin_paginas.cpp  Admin_paginas.h  BinaryListOperations.cpp  CMakeLists.txt  Cancion.h  Cargo.toml  Circular List  Circular List.cpp  Data.h  Double List.cpp  DoubleList.cpp  DoubleList.h  INIReader.cpp  Metadata  Metadata.cpp  PagedArray.cpp  PagedArray.h  Paged_Array.cpp  Paged_Array.h  Pagina.cpp  Pagina.h  Queue.cpp  Queue.h  README.md  ServerSocket.cpp  ServerSocket.h  config.ini  main  main.cpp  mi_programa  ps  respaldo.txt
src/: config.ini  main.rs
