
[package]
name = "Playlist_comunitario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", rev="refs/tags/text-editor"}
egui = "0.26.2"
accesskit = "0.12.3"
ahash = "0.8.11"
backtrace = "0.3.69"
document-features = "0.2.8"

