
[package]
name = "Proyecto_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.12.3"
ahash = "0.8.11"
backtrace = "0.3.69"
document-features = "0.2.8"
fltk = "^1.4.26"
fltk-theme = "0.7.2"
fltk-flex = "0.2.1"
serde_json = { version = "1.0.114", features = [] }
serde = { version = "1.0.197", features = ["derive"] }


